workspace = { members = ["flappydragon", "dungeoncrawl"] }
[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "flappydragon"
path = "flappydragon/src/main.rs"

[[bin]]
name = "dungeoncrawl"
path = "dungeoncrawl/src/main.rs"